add dev logging